E-learning/force-app/main/default/objects/Trail_progress__c/Trail_progress__c.object-meta.xml
<CustomObject>
    <label>Trail progress</label>
    <nameField>
        <label>Trail progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trail progresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>