E-learning/force-app/main/default/objects/Trail_progress__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Trail that the user is solving</description>
    <label>Trail</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Trail progresses (Trail)</relationshipLabel>
    <relationshipName>Trail_progresses1</relationshipName>
    <type>Lookup</type>
</CustomField>