E-learning/force-app/main/default/objects/Trail_progress__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario que ta haciendo el trail</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Trail progresses</relationshipLabel>
    <relationshipName>Trail_progresses</relationshipName>
    <type>Lookup</type>
</CustomField>